# changeLogRadar

./: .gitignore  LICENSE  README.md  index.html  index.yaml  main.py  pyproject.toml  releases.json  scrapper.py  yaml_generator.py
.github/: dependabot.yml
.github/workflows/: ci.yml  daily-scrape.yml  update-changelog.yml
src/: __init__.py  config.py  github_crawler.py  html_generator.py
