[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "changelog-radar"
version = "1.0.0"
description = "A tool to fetch and display release notes from popular open-source projects"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
authors = [
    {name = "ChangeLog Radar Team", email = "team@changelogradra.com"},
]
maintainers = [
    {name = "ChangeLog Radar Team", email = "team@changelogradra.com"},
]
keywords = [
    "changelog",
    "releases",
    "github",
    "automation",
    "open-source",
    "monitoring"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Monitoring",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "requests>=2.31.0",
    "jinja2>=3.1.0",
    "python-dateutil>=2.8.0",
    "rich>=13.0.0",
    "markdown>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ygdrax/changeLogRadar"
Repository = "https://github.com/ygdrax/changeLogRadar"
Documentation = "https://github.com/ygdrax/changeLogRadar#readme"
"Bug Tracker" = "https://github.com/ygdrax/changeLogRadar/issues"
Changelog = "https://github.com/ygdrax/changeLogRadar/releases"

[project.scripts]
changelog-radar = "main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/main.py",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

# Black code formatter configuration
[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''

# Ruff linter configuration
[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "ARG002", # unused method argument
]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# MyPy type checker configuration
[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

